-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.1
-
-
d4ee08158 (dev), e0d77ae72 (dev)
Using 'make install' on the calqlatr example leads to a calqlatr.app bundle that crashes on startup:
------------------------------------- Translated Report (Full Report Below) ------------------------------------- Process: Calqlatr [62795] Path: /tmp/Calqlatr.app/Contents/MacOS/Calqlatr Identifier: io.qt.calqlatr Version: 1.0 (1.0.0) Code Type: ARM-64 (Native) Parent Process: launchd [1] User ID: 501 Date/Time: 2025-06-24 14:14:50.7937 +0200 OS Version: macOS 15.5 (24F74) Report Version: 12 Anonymous UUID: AF273986-1DEE-F7F6-2AAD-F8995B68A287 Sleep/Wake UUID: 8AC41C44-5339-49BD-8D15-1ABDACCFFE16 Time Awake Since Boot: 310000 seconds Time Since Wake: 8850 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_CRASH (SIGABRT) Exception Codes: 0x0000000000000000, 0x0000000000000000 Termination Reason: Namespace SIGNAL, Code 6 Abort trap: 6 Terminating Process: Calqlatr [62795] Application Specific Information: abort() called Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x199675388 __pthread_kill + 8 1 libsystem_pthread.dylib 0x1996ae88c pthread_kill + 296 2 libsystem_c.dylib 0x1995b7c60 abort + 124 3 QtCore 0x1019b6d80 0x1019ac000 + 44416 4 QtCore 0x1019ce384 0x1019ac000 + 140164 5 QtCore 0x101d04d14 QMessageLogger::fatal(char const*, ...) const + 96 6 QtGui 0x1009749b8 0x1008e8000 + 575928 7 QtGui 0x1009729a0 QGuiApplicationPrivate::createPlatformIntegration() + 1464 8 QtGui 0x100974c60 QGuiApplicationPrivate::createEventDispatcher() + 36 9 QtCore 0x101a43730 QCoreApplicationPrivate::init() + 1692 10 QtGui 0x10096e83c QGuiApplicationPrivate::init() + 76 11 QtGui 0x10096f780 QGuiApplication::QGuiApplication(int&, char**, int) + 168 12 Calqlatr 0x10055de30 main + 216 13 dyld 0x19930eb98 start + 6076 Thread 1: 0 libsystem_pthread.dylib 0x1996a9b6c start_wqthread + 0 Thread 2: 0 libsystem_pthread.dylib 0x1996a9b6c start_wqthread + 0 Thread 0 crashed with ARM Thread State (64-bit): x0: 0x0000000000000000 x1: 0x0000000000000000 x2: 0x0000000000000000 x3: 0x0000000000000000 x4: 0x000000012bf08500 x5: 0x000000000000001b x6: 0x0000000000000000 x7: 0x0000000000000117 x8: 0x2bb549c7c0e72cb9 x9: 0x2bb549c5c79cf3b9 x10: 0x0000000000000002 x11: 0x0000010000000000 x12: 0x00000000fffffffd x13: 0x0000000000000000 x14: 0x0000000000000000 x15: 0x0000000000000000 x16: 0x0000000000000148 x17: 0x000000020880dfa8 x18: 0x0000000000000000 x19: 0x0000000000000006 x20: 0x0000000000000103 x21: 0x00000002077bdfe0 x22: 0x0000000000000000 x23: 0x00006000027692a8 x24: 0x0000000000000000 x25: 0x00006000027692a8 x26: 0x00000000ffffffff x27: 0x000000016f8a6860 x28: 0x000000016f8a6954 fp: 0x000000016f8a65f0 lr: 0x00000001996ae88c sp: 0x000000016f8a65d0 pc: 0x0000000199675388 cpsr: 0x40000000 far: 0x0000000000000000 esr: 0x56000080 Address size fault Binary Images: 0x100558000 - 0x100577fff io.qt.calqlatr (1.0) <ab63502d-be17-3783-a840-96beee3b73f9> /private/tmp/Calqlatr.app/Contents/MacOS/Calqlatr 0x1005d8000 - 0x1005ebfff org.qt-project.QtQuickControls2 (6.9) <370d0f82-e892-38f8-be2e-be84696c3cd4> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQuickControls2.framework/Versions/A/QtQuickControls2 0x101408000 - 0x10182bfff org.qt-project.QtQuick (6.9) <8cc50909-a291-3873-b0e4-936c2415e199> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQuick.framework/Versions/A/QtQuick 0x10058c000 - 0x1005a3fff org.qt-project.QtQmlMeta (6.9) <9fbace26-34c2-3772-9442-50449fdf5341> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQmlMeta.framework/Versions/A/QtQmlMeta 0x10063c000 - 0x100647fff org.qt-project.QtQmlWorkerScript (6.9) <85f9928e-1e00-32b1-a29b-823bf96226cc> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQmlWorkerScript.framework/Versions/A/QtQmlWorkerScript 0x10084c000 - 0x1008b3fff org.qt-project.QtOpenGL (6.9) <a5c4c691-be77-3d0a-a711-c0da2c7ebbe5> /private/tmp/Calqlatr.app/Contents/Frameworks/QtOpenGL.framework/Versions/A/QtOpenGL 0x1008e8000 - 0x100f87fff org.qt-project.QtGui (6.9) <4f544aad-06c2-3315-8261-1c9e3a7e3082> /private/tmp/Calqlatr.app/Contents/Frameworks/QtGui.framework/Versions/A/QtGui 0x1010d0000 - 0x101153fff org.qt-project.QtQmlModels (6.9) <6b2b9d8c-c8b4-3e8a-b9d3-ed9cd5c936eb> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQmlModels.framework/Versions/A/QtQmlModels 0x102340000 - 0x1026f3fff org.qt-project.QtQml (6.9) <a8525ab7-f494-3aaf-afdf-60ec3e91e22f> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQml.framework/Versions/A/QtQml 0x101184000 - 0x1012b7fff org.qt-project.QtNetwork (6.9) <275fca10-8f7a-3f0f-a94f-d4b0d98fa0c5> /private/tmp/Calqlatr.app/Contents/Frameworks/QtNetwork.framework/Versions/A/QtNetwork 0x1019ac000 - 0x101e5ffff org.qt-project.QtCore (6.9) <115f06be-4c99-3fa9-8699-1605ab53b730> /private/tmp/Calqlatr.app/Contents/Frameworks/QtCore.framework/Versions/A/QtCore 0x1027c4000 - 0x1028e7fff org.qt-project.QtQuickTemplates2 (6.9) <63d90e86-98be-391a-84d9-787ed1da6e1f> /private/tmp/Calqlatr.app/Contents/Frameworks/QtQuickTemplates2.framework/Versions/A/QtQuickTemplates2 0x101320000 - 0x1013a3fff org.qt-project.QtDBus (6.9) <bd131634-af8c-3140-b3ef-21475baa7c1d> /private/tmp/Calqlatr.app/Contents/Frameworks/QtDBus.framework/Versions/A/QtDBus 0x100728000 - 0x100747fff com.apple.security.csparser (3.0) <c12848ee-0663-3987-842f-8832599d139f> /System/Library/Frameworks/Security.framework/Versions/A/PlugIns/csparser.bundle/Contents/MacOS/csparser 0x19966c000 - 0x1996a7653 libsystem_kernel.dylib (*) <60485b6f-67e5-38c1-aec9-efd6031ff166> /usr/lib/system/libsystem_kernel.dylib 0x1996a8000 - 0x1996b4a47 libsystem_pthread.dylib (*) <647b91fc-96d3-3bbb-af08-970df45257c8> /usr/lib/system/libsystem_pthread.dylib 0x19953f000 - 0x1995c046f libsystem_c.dylib (*) <f4529d5e-24f3-3bbb-bd3c-984856875fc8> /usr/lib/system/libsystem_c.dylib 0x199308000 - 0x1993a34cf dyld (*) <9cf0401a-a938-389e-a77d-9e9608076ccf> /usr/lib/dyld 0x0 - 0xffffffffffffffff ??? (*) <00000000-0000-0000-0000-000000000000> ??? External Modification Summary: Calls made by other processes targeting this process: task_for_pid: 0 thread_create: 0 thread_set_state: 0 Calls made by this process: task_for_pid: 0 thread_create: 0 thread_set_state: 0 Calls made by all processes on this machine: task_for_pid: 3 thread_create: 0 thread_set_state: 158 VM Region Summary: ReadOnly portion of Libraries: Total=933.7M resident=0K(0%) swapped_out_or_unallocated=933.7M(100%) Writable regions: Total=686.9M written=288K(0%) resident=288K(0%) swapped_out=0K(0%) unallocated=686.6M(100%) VIRTUAL REGION REGION TYPE SIZE COUNT (non-coalesced) =========== ======= ======= Activity Tracing 256K 1 Kernel Alloc Once 32K 1 MALLOC 677.2M 19 MALLOC guard page 96K 6 STACK GUARD 56.0M 3 Stack 9296K 4 __AUTH 1143K 210 __AUTH_CONST 24.7M 364 __DATA 5276K 361 __DATA_CONST 16.6M 381 __DATA_DIRTY 688K 106 __FONT_DATA 2352 1 __LINKEDIT 620.5M 15 __OBJC_RO 61.4M 1 __OBJC_RW 2396K 1 __TEXT 313.2M 395 __TPRO_CONST 128K 2 mapped file 32.6M 4 page table in kernel 288K 1 shared memory 80K 4 =========== ======= ======= TOTAL 1.8G 1880 ----------- Full Report ----------- {"app_name":"Calqlatr","timestamp":"2025-06-24 14:14:50.00 +0200","app_version":"1.0","slice_uuid":"ab63502d-be17-3783-a840-96beee3b73f9","build_version":"1.0.0","platform":1,"bundleID":"io.qt.calqlatr","share_with_app_devs":0,"is_first_party":0,"bug_type":"309","os_version":"macOS 15.5 (24F74)","roots_installed":0,"name":"Calqlatr","incident_id":"BEE83910-A737-44F0-A3E1-6857776479A1"} { "uptime" : 310000, "procRole" : "Background", "version" : 2, "userID" : 501, "deployVersion" : 210, "modelCode" : "Mac16,8", "coalitionID" : 105102, "osVersion" : { "train" : "macOS 15.5", "build" : "24F74", "releaseType" : "User" }, "captureTime" : "2025-06-24 14:14:50.7937 +0200", "codeSigningMonitor" : 2, "incident" : "BEE83910-A737-44F0-A3E1-6857776479A1", "pid" : 62795, "translated" : false, "cpuType" : "ARM-64", "roots_installed" : 0, "bug_type" : "309", "procLaunch" : "2025-06-24 14:14:50.4037 +0200", "procStartAbsTime" : 7471513576731, "procExitAbsTime" : 7471522931087, "procName" : "Calqlatr", "procPath" : "\/tmp\/Calqlatr.app\/Contents\/MacOS\/Calqlatr", "bundleInfo" : {"CFBundleShortVersionString":"1.0","CFBundleVersion":"1.0.0","CFBundleIdentifier":"io.qt.calqlatr"}, "storeInfo" : {"deviceIdentifierForVendor":"DBA033BD-7E5F-528C-8209-1C3568C262F9","thirdParty":true}, "parentProc" : "launchd", "parentPid" : 1, "coalitionName" : "io.qt.calqlatr", "crashReporterKey" : "AF273986-1DEE-F7F6-2AAD-F8995B68A287", "appleIntelligenceStatus" : {"reasons":["siriAssetIsNotReady","assetIsNotReady","notOptedIn"],"state":"unavailable"}, "codeSigningID" : "Calqlatr", "codeSigningTeamID" : "", "codeSigningFlags" : 570556929, "codeSigningValidationCategory" : 10, "codeSigningTrustLevel" : 4294967295, "codeSigningAuxiliaryInfo" : 0, "instructionByteStream" : {"beforePC":"fyMD1f17v6n9AwCRm+D\/l78DAJH9e8Go\/w9f1sADX9YQKYDSARAA1A==","atPC":"AwEAVH8jA9X9e7+p\/QMAkZDg\/5e\/AwCR\/XvBqP8PX9bAA1\/WcAqA0g=="}, "bootSessionUUID" : "4AE21AE0-56ED-4228-A02F-B2EA1BD0EA6A", "wakeTime" : 8850, "sleepWakeUUID" : "8AC41C44-5339-49BD-8D15-1ABDACCFFE16", "sip" : "enabled", "exception" : {"codes":"0x0000000000000000, 0x0000000000000000","rawCodes":[0,0],"type":"EXC_CRASH","signal":"SIGABRT"}, "termination" : {"flags":0,"code":6,"namespace":"SIGNAL","indicator":"Abort trap: 6","byProc":"Calqlatr","byPid":62795}, "asi" : {"libsystem_c.dylib":["abort() called"]}, "extMods" : {"caller":{"thread_create":0,"thread_set_state":0,"task_for_pid":0},"system":{"thread_create":0,"thread_set_state":158,"task_for_pid":3},"targeted":{"thread_create":0,"thread_set_state":0,"task_for_pid":0},"warnings":0}, "faultingThread" : 0, "threads" : [{"triggered":true,"id":12334785,"threadState":{"x":[{"value":0},{"value":0},{"value":0},{"value":0},{"value":5032150272},{"value":27},{"value":0},{"value":279},{"value":3149504636699225273},{"value":3149504628221866937},{"value":2},{"value":1099511627776},{"value":4294967293},{"value":0},{"value":0},{"value":0},{"value":328},{"value":8732598184},{"value":0},{"value":6},{"value":259},{"value":8715493344,"symbolLocation":224,"symbol":"_main_thread"},{"value":0},{"value":105553157591720},{"value":0},{"value":105553157591720},{"value":4294967295},{"value":6166308960},{"value":6166309204}],"flavor":"ARM_THREAD_STATE64","lr":{"value":6868887692},"cpsr":{"value":1073741824},"fp":{"value":6166308336},"sp":{"value":6166308304},"esr":{"value":1442840704,"description":" Address size fault"},"pc":{"value":6868652936,"matchesCrashFrame":1},"far":{"value":0}},"queue":"com.apple.main-thread","frames":[{"imageOffset":37768,"symbol":"__pthread_kill","symbolLocation":8,"imageIndex":14},{"imageOffset":26764,"symbol":"pthread_kill","symbolLocation":296,"imageIndex":15},{"imageOffset":494688,"symbol":"abort","symbolLocation":124,"imageIndex":16},{"imageOffset":44416,"imageIndex":10},{"imageOffset":140164,"imageIndex":10},{"imageOffset":3509524,"symbol":"QMessageLogger::fatal(char const*, ...) const","symbolLocation":96,"imageIndex":10},{"imageOffset":575928,"imageIndex":6},{"imageOffset":567712,"symbol":"QGuiApplicationPrivate::createPlatformIntegration()","symbolLocation":1464,"imageIndex":6},{"imageOffset":576608,"symbol":"QGuiApplicationPrivate::createEventDispatcher()","symbolLocation":36,"imageIndex":6},{"imageOffset":620336,"symbol":"QCoreApplicationPrivate::init()","symbolLocation":1692,"imageIndex":10},{"imageOffset":550972,"symbol":"QGuiApplicationPrivate::init()","symbolLocation":76,"imageIndex":6},{"imageOffset":554880,"symbol":"QGuiApplication::QGuiApplication(int&, char**, int)","symbolLocation":168,"imageIndex":6},{"imageOffset":24112,"symbol":"main","symbolLocation":216,"imageIndex":0},{"imageOffset":27544,"symbol":"start","symbolLocation":6076,"imageIndex":17}]},{"id":12335022,"frames":[{"imageOffset":7020,"symbol":"start_wqthread","symbolLocation":0,"imageIndex":15}],"threadState":{"x":[{"value":6167441408},{"value":4611},{"value":6166904832},{"value":0},{"value":409604},{"value":18446744073709551615},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0}],"flavor":"ARM_THREAD_STATE64","lr":{"value":0},"cpsr":{"value":0},"fp":{"value":0},"sp":{"value":6167441408},"esr":{"value":1442840704,"description":" Address size fault"},"pc":{"value":6868867948},"far":{"value":0}}},{"id":12335023,"frames":[{"imageOffset":7020,"symbol":"start_wqthread","symbolLocation":0,"imageIndex":15}],"threadState":{"x":[{"value":6168014848},{"value":10499},{"value":6167478272},{"value":0},{"value":409604},{"value":18446744073709551615},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0},{"value":0}],"flavor":"ARM_THREAD_STATE64","lr":{"value":0},"cpsr":{"value":0},"fp":{"value":0},"sp":{"value":6168014848},"esr":{"value":1442840704,"description":" Address size fault"},"pc":{"value":6868867948},"far":{"value":0}}}], "usedImages" : [ { "source" : "P", "arch" : "arm64", "base" : 4300570624, "CFBundleShortVersionString" : "1.0", "CFBundleIdentifier" : "io.qt.calqlatr", "size" : 131072, "uuid" : "ab63502d-be17-3783-a840-96beee3b73f9", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/MacOS\/Calqlatr", "name" : "Calqlatr", "CFBundleVersion" : "1.0.0" }, { "source" : "P", "arch" : "arm64", "base" : 4301094912, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQuickControls2", "size" : 81920, "uuid" : "370d0f82-e892-38f8-be2e-be84696c3cd4", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQuickControls2.framework\/Versions\/A\/QtQuickControls2", "name" : "QtQuickControls2", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4315971584, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQuick", "size" : 4341760, "uuid" : "8cc50909-a291-3873-b0e4-936c2415e199", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQuick.framework\/Versions\/A\/QtQuick", "name" : "QtQuick", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4300783616, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQmlMeta", "size" : 98304, "uuid" : "9fbace26-34c2-3772-9442-50449fdf5341", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQmlMeta.framework\/Versions\/A\/QtQmlMeta", "name" : "QtQmlMeta", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4301504512, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQmlWorkerScript", "size" : 49152, "uuid" : "85f9928e-1e00-32b1-a29b-823bf96226cc", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQmlWorkerScript.framework\/Versions\/A\/QtQmlWorkerScript", "name" : "QtQmlWorkerScript", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4303667200, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtOpenGL", "size" : 425984, "uuid" : "a5c4c691-be77-3d0a-a711-c0da2c7ebbe5", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtOpenGL.framework\/Versions\/A\/QtOpenGL", "name" : "QtOpenGL", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4304306176, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtGui", "size" : 6946816, "uuid" : "4f544aad-06c2-3315-8261-1c9e3a7e3082", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtGui.framework\/Versions\/A\/QtGui", "name" : "QtGui", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4312596480, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQmlModels", "size" : 540672, "uuid" : "6b2b9d8c-c8b4-3e8a-b9d3-ed9cd5c936eb", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQmlModels.framework\/Versions\/A\/QtQmlModels", "name" : "QtQmlModels", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4331929600, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQml", "size" : 3883008, "uuid" : "a8525ab7-f494-3aaf-afdf-60ec3e91e22f", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQml.framework\/Versions\/A\/QtQml", "name" : "QtQml", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4313333760, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtNetwork", "size" : 1261568, "uuid" : "275fca10-8f7a-3f0f-a94f-d4b0d98fa0c5", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtNetwork.framework\/Versions\/A\/QtNetwork", "name" : "QtNetwork", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4321886208, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtCore", "size" : 4931584, "uuid" : "115f06be-4c99-3fa9-8699-1605ab53b730", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtCore.framework\/Versions\/A\/QtCore", "name" : "QtCore", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4336664576, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtQuickTemplates2", "size" : 1196032, "uuid" : "63d90e86-98be-391a-84d9-787ed1da6e1f", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtQuickTemplates2.framework\/Versions\/A\/QtQuickTemplates2", "name" : "QtQuickTemplates2", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64", "base" : 4315021312, "CFBundleShortVersionString" : "6.9", "CFBundleIdentifier" : "org.qt-project.QtDBus", "size" : 540672, "uuid" : "bd131634-af8c-3140-b3ef-21475baa7c1d", "path" : "\/private\/tmp\/Calqlatr.app\/Contents\/Frameworks\/QtDBus.framework\/Versions\/A\/QtDBus", "name" : "QtDBus", "CFBundleVersion" : "6.9.1" }, { "source" : "P", "arch" : "arm64e", "base" : 4302471168, "CFBundleShortVersionString" : "3.0", "CFBundleIdentifier" : "com.apple.security.csparser", "size" : 131072, "uuid" : "c12848ee-0663-3987-842f-8832599d139f", "path" : "\/System\/Library\/Frameworks\/Security.framework\/Versions\/A\/PlugIns\/csparser.bundle\/Contents\/MacOS\/csparser", "name" : "csparser", "CFBundleVersion" : "61439.120.27" }, { "source" : "P", "arch" : "arm64e", "base" : 6868615168, "size" : 243284, "uuid" : "60485b6f-67e5-38c1-aec9-efd6031ff166", "path" : "\/usr\/lib\/system\/libsystem_kernel.dylib", "name" : "libsystem_kernel.dylib" }, { "source" : "P", "arch" : "arm64e", "base" : 6868860928, "size" : 51784, "uuid" : "647b91fc-96d3-3bbb-af08-970df45257c8", "path" : "\/usr\/lib\/system\/libsystem_pthread.dylib", "name" : "libsystem_pthread.dylib" }, { "source" : "P", "arch" : "arm64e", "base" : 6867382272, "size" : 529520, "uuid" : "f4529d5e-24f3-3bbb-bd3c-984856875fc8", "path" : "\/usr\/lib\/system\/libsystem_c.dylib", "name" : "libsystem_c.dylib" }, { "source" : "P", "arch" : "arm64e", "base" : 6865059840, "size" : 636112, "uuid" : "9cf0401a-a938-389e-a77d-9e9608076ccf", "path" : "\/usr\/lib\/dyld", "name" : "dyld" }, { "size" : 0, "source" : "A", "base" : 0, "uuid" : "00000000-0000-0000-0000-000000000000" } ], "sharedCache" : { "base" : 6864224256, "size" : 5047205888, "uuid" : "d7397d7f-8df9-3920-81a7-c0a144be9c51" }, "vmSummary" : "ReadOnly portion of Libraries: Total=933.7M resident=0K(0%) swapped_out_or_unallocated=933.7M(100%)\nWritable regions: Total=686.9M written=288K(0%) resident=288K(0%) swapped_out=0K(0%) unallocated=686.6M(100%)\n\n VIRTUAL REGION \nREGION TYPE SIZE COUNT (non-coalesced) \n=========== ======= ======= \nActivity Tracing 256K 1 \nKernel Alloc Once 32K 1 \nMALLOC 677.2M 19 \nMALLOC guard page 96K 6 \nSTACK GUARD 56.0M 3 \nStack 9296K 4 \n__AUTH 1143K 210 \n__AUTH_CONST 24.7M 364 \n__DATA 5276K 361 \n__DATA_CONST 16.6M 381 \n__DATA_DIRTY 688K 106 \n__FONT_DATA 2352 1 \n__LINKEDIT 620.5M 15 \n__OBJC_RO 61.4M 1 \n__OBJC_RW 2396K 1 \n__TEXT 313.2M 395 \n__TPRO_CONST 128K 2 \nmapped file 32.6M 4 \npage table in kernel 288K 1 \nshared memory 80K 4 \n=========== ======= ======= \nTOTAL 1.8G 1880 \n", "legacyInfo" : { "threadTriggered" : { "queue" : "com.apple.main-thread" } }, "logWritingSignature" : "cced52177158eac3cc61c6f5f347ae83e25a1ea9", "trialInfo" : { "rollouts" : [ { "rolloutId" : "670ea6eb7a111748a97092a4", "factorPackIds" : { "SIRI_TEXT_TO_SPEECH" : "6847794cb4d8c1072b580d11" }, "deploymentId" : 240000148 }, { "rolloutId" : "67181b10c68c361a728c7cfa", "factorPackIds" : { }, "deploymentId" : 240000005 } ], "experiments" : [ { "treatmentId" : "d7ff00dd-1c5a-4dbb-85d6-7a936d671384", "experimentId" : "67f46bbc84eaf455d73c6098", "deploymentId" : 400000001 } ] } } Model: Mac16,8, BootROM 11881.121.1, proc 14:10:4 processors, 48 GB, SMC Graphics: Apple M4 Pro, Apple M4 Pro, Built-In Display: Color LCD, 3024 x 1964 Retina, Main, MirrorOff, Online Display: DELL U2723QE, 3840 x 2160 (2160p/4K UHD 1 - Ultra High Definition), MirrorOff, Online Memory Module: LPDDR5, Hynix AirPort: spairport_wireless_card_type_wifi (0x14E4, 0x4388), wl0: Mar 22 2025 02:17:00 version 23.40.30.0.41.51.180 FWID 01-989cd4a9 IO80211_driverkit-1475.39 "IO80211_driverkit-1475.39" Apr 18 2025 20:10:40 AirPort: Bluetooth: Version (null), 0 services, 0 devices, 0 incoming serial ports Network Service: Wi-Fi, AirPort, en0 USB Device: USB31Bus USB Device: 4-Port USB 3.0 Hub USB Device: 4-Port USB 3.0 Hub USB Device: USB 10/100/1000 LAN USB Device: 4-Port USB 2.0 Hub USB Device: Evoluent VerticalMouse 4 USB Device: Natural® Ergonomic Keyboard 4000 USB Device: USB2.0 HID USB Device: 4-Port USB 2.0 Hub USB Device: USB31Bus USB Device: USB31Bus Thunderbolt Bus: MacBook Pro, Apple Inc. Thunderbolt Bus: MacBook Pro, Apple Inc. Thunderbolt Bus: MacBook Pro, Apple Inc.
- is duplicated by
-
QTBUG-139639 [Reg 6.7.3 -> 6.8.4][macOS] qt_generate_deploy_qml_app_script() results in bad signatures
-
- Closed
-
For Gerrit Dashboard: QTBUG-138019 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
674831,3 | macdeployqt: Fix broken signatures by re-signing | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
682669,4 | macdeployqt: Make code signing with identity "-" the default | dev | qt/qtbase | Status: MERGED | +2 | 0 |
682740,2 | Doc: Add new -no-codesign option for macdeployqt | dev | qt/qtdoc | Status: MERGED | +2 | 0 |