macdeployqt: Make code signing with identity "-" the default

Code signing is now enabled by default using ad-hoc signing
(identity "-"), making it an opt-out feature instead of opt-in.

Users can now:
- Use default ad-hoc signing (no flags needed)
- Sign with a specific identity using -codesign=<identity>
- Opt out of code signing with the new -no-codesign flag

This fix was needed mainly because Qt .framework modules from
the Qt Online Installer are now signed by default. As macdeployqt
fiddles with rpaths, these signatures broke, making macdeployqt
useless without any further signing steps.

[ChangeLog][macdeployqt] macdeployqt does now do ad-hoc signing
of its content by default. Use the new option -no-codesign to
disable that.

Fixes: QTBUG-138019
Change-Id: I88b3e54d177fb803867eda8320970a7369c6901d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>