src/tools/macdeployqt/macdeployqt/main.cpp
@@ -28,7 +28,9 @@ int main(int argc, char **argv)
         qDebug() << "   -qmldir=<path>                : Scan for QML imports in the given path";
         qDebug() << "   -qmlimport=<path>             : Add the given path to the QML module search locations";
         qDebug() << "   -always-overwrite             : Copy files even if the target file exists";
-        qDebug() << "   -codesign=<ident>             : Run codesign with the given identity on all executables";
+        qDebug() << "   -codesign=<ident>             : Run codesign with the given identity on "
+                    "all executables (default: ad-hoc sign)";
+        qDebug() << "   -no-codesign                  : Disable code signing";
         qDebug() << "   -hardened-runtime             : Enable Hardened Runtime when code signing";
         qDebug() << "   -timestamp                    : Include a secure timestamp when code signing (requires internet connection)";
         qDebug() << "   -sign-for-notarization=<ident>: Activate the necessary options for notarization (requires internet connection)";
@@ -77,6 +79,7 @@ int main(int argc, char **argv)
     extern bool runCodesign;
     extern QString codesignIdentiy;
     extern bool hardenedRuntime;
+    bool noCodesignExplicit = false;
     extern bool appstoreCompliant;
     extern bool deployFramework;
     extern bool secureTimestamp;
@@ -147,8 +150,16 @@ int main(int argc, char **argv)
         } else if (argument == QByteArray("-always-overwrite")) {
             LogDebug() << "Argument found:" << argument;
             alwaysOwerwriteEnabled = true;
+        } else if (argument == QByteArray("-no-codesign")) {
+            LogDebug() << "Argument found:" << argument;
+            runCodesign = false;
+            noCodesignExplicit = true;
         } else if (argument.startsWith(QByteArray("-codesign"))) {
             LogDebug() << "Argument found:" << argument;
+            if (noCodesignExplicit) {
+                LogError() << "Error: -no-codesign cannot be combined with -codesign\n";
+                return 1;
+            }
             int index = argument.indexOf("=");
             if (index < 0 || index >= argument.size()) {
                 LogError() << "Missing code signing identity";
@@ -159,6 +170,10 @@ int main(int argc, char **argv)
             }
         } else if (argument.startsWith(QByteArray("-sign-for-notarization"))) {
             LogDebug() << "Argument found:" << argument;
+            if (noCodesignExplicit) {
+                LogError() << "Error: -no-codesign cannot be combined with -sign-for-notarization\n";
+                return 1;
+            }
             int index = argument.indexOf("=");
             if (index < 0 || index >= argument.size()) {
                 LogError() << "Missing code signing identity";
